--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,9 +10,8 @@ on:
     branches:
       - main
 
-# For NPM provenance
-# permissions:
-#   id-token: write
+permissions:
+  id-token: write
 
 jobs:
   release:
@@ -48,11 +47,14 @@ jobs:
       - name: Install Dependencies
         run: bun i
 
-      # - name: Build
-      #   run: bun build
+      - name: Build
+        run: bun rollup -c rollup.config.ts --configPlugin typescript
+
+      - name: Prettify
+        run: bun prettier 'index.d.ts' --write
 
       - name: Create Release
         env:
           GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
-          # NPM_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
         run: bun semantic-release
