--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@archoleat/repo-template",
-  "description": "Repository template",
+  "name": "@archoleat/slugger",
+  "description": "Transliterates Cyrillic to Latin",
   "version": "1.0.0",
   "license": "MIT",
   "author": {
@@ -8,16 +8,23 @@
     "name": "Archoleat",
     "url": "https://github.com/archoleat"
   },
-  "homepage": "https://github.com/archoleat/repo-template#readme",
+  "homepage": "https://github.com/archoleat/slugger#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/archoleat/repo-template.git"
+    "url": "git+https://github.com/archoleat/slugger.git"
   },
   "bugs": {
-    "url": "https://github.com/archoleat/repo-template/issues"
+    "url": "https://github.com/archoleat/slugger/issues"
   },
   "keywords": [
-    "repo-template"
+    "archoleat",
+    "cyrillic-to-latin",
+    "cyrillic",
+    "latin",
+    "plugin",
+    "slug",
+    "slugger",
+    "transliteration"
   ],
   "engines": {
     "bun": ">=1.0.0"
@@ -42,12 +49,13 @@
     "@archoleat/eslint-flat-compatibility": "^1.2.1",
     "@archoleat/prettier-define-config": "^1.1.0",
     "@archoleat/semantic-release-define-config": "^1.2.0",
-    "@commitlint/cli": "^19.6.1",
-    "@commitlint/config-conventional": "^19.6.0",
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
     "@commitlint/types": "^19.5.0",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@types/bun": "^1.1.14",
+    "@types/bun": "^1.2.4",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "conventional-changelog-conventionalcommits": "^8.0.0",
@@ -57,20 +65,23 @@
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-define-config": "^2.1.0",
-    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-import-resolver-typescript": "^3.8.3",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unicorn": "^56.0.1",
-    "git-pull-run": "^1.4.0",
-    "globals": "^15.14.0",
+    "git-pull-run": "^1.5.0",
+    "globals": "^15.15.0",
     "husky": "^9.1.7",
-    "lint-staged": "^15.3.0",
-    "prettier": "^3.4.2",
+    "lint-staged": "^15.4.3",
+    "prettier": "^3.5.3",
     "remark": "15.0.1",
     "remark-cli": "^12.0.1",
-    "remark-preset-lint-consistent": "^6.0.0",
-    "remark-preset-lint-markdown-style-guide": "^6.0.0",
-    "remark-preset-lint-recommended": "^7.0.0",
-    "semantic-release": "^24.2.0"
+    "remark-preset-lint-consistent": "^6.0.1",
+    "remark-preset-lint-markdown-style-guide": "^6.0.1",
+    "remark-preset-lint-recommended": "^7.0.1",
+    "rollup": "^4.34.9",
+    "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-esbuild": "^6.2.1",
+    "semantic-release": "^24.2.3"
   }
 }
