--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "type": "module",
   "types": "index.d.ts",
   "imports": {
-    "#src/*": "./src/*"
+    "#src/*": "./src/*",
+    "#types/*": "./src/types/*"
   },
   "exports": {
     ".": "./index.js"
@@ -52,6 +53,7 @@
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
     "@commitlint/types": "^19.5.0",
+    "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-typescript": "^12.1.2",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
