--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
     "allowImportingTsExtensions": true,
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
+    "paths": {
+      "#types/*": ["./src/types/*"]
+    },
     "rootDir": "src",
     // Projects
     "disableReferencedProjectLoad": true,
