--- a/.github/workflows/spec.yaml
+++ b/.github/workflows/spec.yaml
@@ -5,11 +5,13 @@ on:
     branches:
       - main
     paths:
+      - 'package.json'
       - 'src/**/*.ts'
   push:
     branches:
       - main
     paths:
+      - 'package.json'
       - 'src/**/*.ts'
 
 jobs:
