--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "author": {
-    "email": "archoleat@gmail.com",
+    "email": "nikkeyl.me@gmail.com",
     "name": "Archoleat",
     "url": "https://github.com/archoleat"
   },
