--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@rollup/plugin-typescript": "^12.1.4",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@types/bun": "^1.2.19",
+    "@types/bun": "^1.2.20",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "conventional-changelog-conventionalcommits": "^9.1.0",
@@ -72,7 +72,7 @@
     "git-pull-run": "^1.6.2",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.2",
+    "lint-staged": "^16.1.5",
     "prettier": "^3.6.2",
     "remark": "15.0.1",
     "remark-cli": "^12.0.1",
@@ -82,6 +82,7 @@
     "rollup": "^4.46.2",
     "rollup-plugin-dts": "^6.2.1",
     "rollup-plugin-esbuild": "^6.2.1",
-    "semantic-release": "^24.2.7"
+    "semantic-release": "^24.2.7",
+    "tslib": "^2.8.1"
   }
 }
