refactor: .editorconfig-checker.json
Signed-off-by: nikkeyl <131481562+nikkeyl@users.noreply.github.com>

--- a/.editorconfig-checker.json
+++ b/.editorconfig-checker.json
@@ -1,7 +1,8 @@
 {
   "exclude": [
-    "config.yml",
     "CHANGELOG.md",
-    "README.md"
+    "config.yml",
+    "README.md",
+    "semantic-pull-request-title.yaml"
   ]
 }
